fix: identical titles sorting bug, heading overflow

--- a/rotator/wbt.rotator.css
+++ b/rotator/wbt.rotator.css
@@ -16,11 +16,11 @@
 .wbt-rotator__loaded .wbt-rotator-legend {display:block;}
 .wbt-rotator-category_title {margin-bottom:10px;padding:15px 0 0;font-size:19px;line-height:25px;}
 .wbt-rotator-category_wrap {position:relative;}
-.wbt-rotator-heading {position:relative;padding:0 46px 0 0;margin:0 0 10px 0;font-size:19px;line-height:25px;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}
-.wbt-rotator__descriptions .wbt-rotator-heading {float:left;width:192px;max-width:100%;}
-.wbt-rotator-heading_text {}
-.wbt-rotator-titles_list {position:relative;clear:left;margin:0;padding:0;font-size:15px;line-height:16px;list-style:none;}
-.wbt-rotator__descriptions .wbt-rotator-titles_list {float:left;width:194px;max-width:100%;margin:0 10% 20px 0;}
+.wbt-rotator-heading {position:relative;width:192px;max-width:100%;padding:0 46px 0 0;margin:0 0 10px 0;font-size:19px;line-height:25px;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}
+.wbt-rotator__descriptions .wbt-rotator-heading {float:left;}
+.wbt-rotator-heading_text {display:block;overflow:hidden;text-overflow:ellipsis;}
+.wbt-rotator-titles_list {position:relative;clear:left;width:194px;max-width:100%;margin:0;padding:0;font-size:15px;line-height:16px;list-style:none;}
+.wbt-rotator__descriptions .wbt-rotator-titles_list {float:left;margin:0 10% 20px 0;}
 .wbt-rotator-titles_item {position:absolute;left:0;right:0;margin:0;padding:6px 24px 8px 0;overflow:hidden;cursor:pointer;-webkit-transition-duration:100ms;transition-duration:100ms;-webkit-transition-property:color;transition-property:color;}
 .wbt-rotator-titles_item:after {display:block;position:relative;top:1px;white-space:nowrap;overflow:hidden;font-size:10px;direction:rtl;content:". . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .";}
 .wbt-rotator-titles_item:hover,
